fixed bug when overlapping colors

--- a/style.css
+++ b/style.css
@@ -128,3 +128,11 @@ label{
     font-weight: bold;
 
 }
+
+.black{
+    background-color: #293332;
+}
+
+.white{
+    background-color: white;
+}
